--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,6 +65,15 @@ li {
     list-style: none;
 }
 
+h1.pageTitle {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+
+.mdl-card {
+    border: 1px solid #bbb;
+}
+
 body{
     font-family: 'Raleway', sans-serif;
     background: whitesmoke;
@@ -101,6 +110,31 @@ button.mdl-button {
     width: auto;
 }
 
+/* Profile  */
+.profile-card-square.mdl-card {
+  width: 320px;
+  height: 500px;
+}
+.profile-card-square > .mdl-card__title {
+  color: black;
+}
+
+h2.mdl-card__title-text.profileName {
+    top: 0;
+    text-transform: capitalize;
+}
+
+div.h4{
+    text-decoration: underline;
+}
+
+ul li p {
+    text-align: left;
+}
+
+div.mdl-card__supporting-text ul {
+    margin-top: 1em;
+}
 
 /* GA colors
 #fa4542 red
