--- a/client/src/App.css
+++ b/client/src/App.css
@@ -210,13 +210,24 @@ div.mdl-card__supporting-text ul {
     position: absolute;
     display: flex;
     flex-direction: row;
-<<<<<<< HEAD
-}
-=======
     justify-content: center;
-    top:20%;
+    top:30%;
     right: 30%;
     width: 550px;
     height: 400px;
 }
->>>>>>> add style to register page
+.title {
+    border: 1px lightblue solid;
+    background-color: lightblue;
+    color: white;
+    border-radius: 10px;
+    width: 530px;
+    height: 90px;
+    padding: 2px;
+    margin: 15px;
+    position: absolute;
+    justify-content: center;
+    top: -30%;
+    left: -1%;
+    /* display: flex; */ 
+}
