--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,7 +83,7 @@ main.mdl-layout__content {
 }
 footer{
     position: absolute;
-    /* bottom: 1em; */
+     bottom: 1em; 
     width: 100%;
 }
 /* Home */
