--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,84 +138,17 @@ div.mdl-card__supporting-text ul {
 
 */
 
-/* login */
+/* login / Register */
 div.mdl-textfield input{
     text-align: center;
     padding: 15px;
     width: auto;
     margin: 0 auto;
 }
-.login-page{
+.login-page, .register{
    background-color: lightblue;
     /* position: absolute; */
     border-radius: 30px;
     width: 90vw;
     margin: 0 auto;
-}
-/* Register-page */
-#user-reg{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-#password-reg{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-#email{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-#name{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-#last{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-#submit{
-    text-align: center;
-    color: white;
-    background-color:lightblue;
-    border-radius: 10px;
-    border: 1px white solid;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
-    padding: 10px;
-    margin: 10px;
-    position: absolute;
-    right: 25%;
-}
-.register{
-    background-color: lightblue;
-    border-radius: 15px;
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    top:30%;
-    right: 30%;
-    width: 550px;
-    height: 400px;
-}
-.title {
-    border: 1px lightblue solid;
-    background-color: lightblue;
-    color: white;
-    border-radius: 10px;
-    width: 530px;
-    height: 90px;
-    padding: 2px;
-    margin: 15px;
-    position: absolute;
-    justify-content: center;
-    top: -30%;
-    left: -1%;
-    /* display: flex; */ 
 }
