--- a/client/src/App.css
+++ b/client/src/App.css
@@ -232,4 +232,77 @@ p{
 }
 
 
+.register{
+    background-color: lightblue;
+    border-radius: 15px;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    top:30%;
+    right: 30%;
+    width: 550px;
+    height: 400px;
+}
+.title {
+    border: 1px lightblue solid;
+    background-color: lightblue;
+    color: white;
+    border-radius: 10px;
+    width: 530px;
+    height: 90px;
+    padding: 2px;
+    margin: 15px;
+    position: absolute;
+    justify-content: center;
+    top: -30%;
+    left: -1%;
+    /* display: flex; */ 
+}
+/* Edit Pofile */
+#url{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#age{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#class-name{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#cohort{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#interest{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#location{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#bio{
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
+#enter{
+    height: 30px;
+    width: 100px;
+    display: flex;
+    bottom: -4%;
+    right: 30%;
+}
+.edit-form{
+    height: 100vh;
+}
 
