--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,6 +160,9 @@ div.mdl-textfield input{
     margin-bottom: 2em;
     overflow: auto;
 }
+.message-tab .mdl-card__supporting-text {
+    overflow: auto;
+}
 /*Message Form */
 .message-form{
     height: auto;
@@ -171,6 +174,18 @@ div.mdl-textfield input{
 }
 .message-form .mdl-card__supporting-text{
     margin: 0 auto;
+}
+.messageContent {
+    text-align: left;
+    line-height: 170%;
+    padding: 0em 1em;
+    border-bottom: 1px solid #bbb;
+    margin-bottom: 1em;
+}
+
+.messageContent li {
+    text-align: justify;
+    padding-bottom: 1em;
 }
 textarea#hello{
     background-color:whitesmoke;
