--- a/client/src/App.css
+++ b/client/src/App.css
@@ -148,7 +148,7 @@ div.mdl-textfield input{
     width: auto;
     margin: 0 auto;
 }
-.login-page, .register-page, .edit-form.mdl-card, .message-tab{
+.login-page, .register-page, .edit-form.mdl-card, .message-tab, .events-page{
    background-color: #ffffff;
     border-radius: 5px;
     width: 90vw;
@@ -199,4 +199,48 @@ textarea#hello{
 }
 #send:hover{
     color: black;
+}
+
+/* events  */
+li.event {
+    margin-bottom: 2em;
+}
+
+ul.event-info {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+.events-page h2.mdl-card__title-text {align-self: center;}
+
+.events-page .mdl-card__title {height: 100px;align-self: center;}
+
+.events-page .mdl-card__supporting-text {
+    height: 150px;
+    margin-top: 2em;
+}
+
+.events-page .mdl-card__actions.mdl-card--border {
+    height: 100px;
+}
+
+.events-page .mdl-card__actions a {
+    width: 70%;
+    top: 1em;
+}
+
+
+h3.subText {
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+.events-page .mdl-card__supporting-text h2 {
+    text-align: left;
+    margin-bottom: 0.5em;
+}
+@media(min-width: 760px){
+    .events-page{
+        width: 30vw;
+    }
 }
